# pyviva

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-app.yml
pyviva/: __init__.py  database.py  framework.py  frontend.py  templates.py
pyviva/resources/: quiz.csv  quiz.sqlite3
scripts/: install.ps1  install.sh
tests/: test_pyviva.py
